Goq ai integration fixes